change the ui and delete the unnecessary file

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/medical_search
 jdbc.username=root
-jdbc.password=lyw123
+jdbc.password=2015022136
