--- a/pom.xml
+++ b/pom.xml
@@ -116,12 +116,15 @@
   <build>
     <resources>
       <resource>
-        <directory>src/main/java</directory><!--所在的目录-->
+        <directory>src/main/resources</directory><!--所在的目录-->
         <includes><!--包括目录下的.properties,.xml 文件都会扫描到-->
           <include>**/*.properties</include>
           <include>**/*.xml</include>
+          <include>**/*.txt</include>
         </includes>
       </resource>
+      
+      
     </resources>
     <plugins>
       <plugin>
