change the ui and update the style of css file

--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,6 @@
   <artifactId>Medical_serach</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
-
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
@@ -114,6 +112,7 @@
 
 
   <build>
+    <finalName>search</finalName>
     <resources>
       <resource>
         <directory>src/main/resources</directory><!--所在的目录-->
